docs/v0.1.0/_sources/gallery/data_generation_custom_kernel.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/data_generation_custom_kernel.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_data_generation_custom_kernel.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_data_generation_custom_kernel.py:


Generating data With a Custom Kernel
====================================

This example demonstrates how to:
  1. Generate synthetic signals with up to 3 Gaussian pulses.
  2. Retain clean pulse traces as reconstruction targets.
  3. Visualize observed and clean pulse signals.

.. GENERATED FROM PYTHON SOURCE LINES 12-14

Imports
-------

.. GENERATED FROM PYTHON SOURCE LINES 14-18

.. code-block:: Python

    from DeepPeak.generation import SignalGenerator
    from DeepPeak import CustomKernel, UniformCount
    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 19-25

Generate Synthetic Signal Dataset
---------------------------------

We generate a dataset with `NUM_PEAKS` Gaussian pulses per signal.
The peak amplitudes, positions, and widths are randomly chosen within
specified ranges.

.. GENERATED FROM PYTHON SOURCE LINES 25-60

.. code-block:: Python



    x = np.linspace(-1, 1, 600)
    _kernel = np.exp(-((x + 0.05) ** 2) / (2 * (0.03**2))) - np.exp(
        -((x - 0.05) ** 2) / (2 * (0.03**2))
    )

    _kernel = CustomKernel(kernel=_kernel, amplitude=(10, 300), position=(0.3, 0.7))

    NUM_PEAKS = 3
    SEQUENCE_LENGTH = 200
    sample_count = 12


    x_values = np.linspace(0, 4, SEQUENCE_LENGTH)
    generator = SignalGenerator(
        sequence_length=SEQUENCE_LENGTH,
        x_values=x_values,
    )


    dataset = generator.generate(
        n_samples=sample_count,
        kernel=_kernel,
        peak_count=UniformCount(bounds=(1, 1)),
        noise_std=(0, 1),  # Add some noise
        categorical_peak_count=False,
        drift=(0, 10),
    )

    dataset.plot(
        number_of_columns=3,
        number_of_samples=9,
        reference_pulse_trace=dataset.clean_signals,
    )



.. image-sg:: /gallery/images/sphx_glr_data_generation_custom_kernel_001.png
   :alt: Sample 0, Sample 1, Sample 2, Sample 3, Sample 4, Sample 5, Sample 6, Sample 7, Sample 8
   :srcset: /gallery/images/sphx_glr_data_generation_custom_kernel_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 2400x900 with 9 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.303 seconds)


.. _sphx_glr_download_gallery_data_generation_custom_kernel.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: data_generation_custom_kernel.ipynb <data_generation_custom_kernel.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: data_generation_custom_kernel.py <data_generation_custom_kernel.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: data_generation_custom_kernel.zip <data_generation_custom_kernel.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
